[package]
name = "yaz0"
version = "0.3.0"
authors = ["Erin Moon <erin@hashbang.sh>"]
description = "A library for de/compressing Nintendo Yaz0 files"
license = "MIT"
repository = "https://github.com/gcnhax/yaz0-rs"
readme = "README.md"
documentation = "https://docs.rs/yaz0"
keywords = ["yaz0", "gamecube", "gcn", "romhacking"]
categories = ["compression"]
exclude = ["data/*"]
edition = "2018"

[dependencies]
byteorder = "1.3"
arrayvec = "0.5"
thiserror = "1.0"
indicatif = { version = "0.15", optional = true }
clap = { version = "2.33", optional = true }

[dev-dependencies]
rand = "0.7"
pretty_assertions = "0.6"
indicatif = "0.15"

[features]
yaztool = ["clap", "indicatif"]

[[bin]]
name = "yaztool"
path = "src/bin/yaztool.rs"
required-features = ["yaztool"]

[badges]
maintenance = { status = "actively-developed" }
